# webterm

./: .dockerignore  .gitignore  Dockerfile  ISSUE.md  Makefile  PATCH.md  README.md  REIZE_FIXES_SUMMARY.md  TODO.md  bunfig.toml  go.mod  go.sum  package-lock.json  package.json  prod.compose.yaml  pyproject.toml  test_resize_fixes.html  tsconfig.json
.github/: copilot-instructions.md
.github/instructions/: go.instructions.md
.github/skills/screenshot-debugging/: SKILL.md
.github/workflows/: ci.yml  docker.yml  prune-actions-artifacts.yml
cmd/webterm/: main.go  main_test.go
docs/: ARCHITECTURE.md  ROADMAP.md  ink-clear-fix.md  pyte-patches.md
examples/: open_link.py
go/terminalstate/: tracker_test.go
go/webterm/: cli.go  constants.go  coverage_boost_test.go  docker_exec_session.go  docker_stats_test.go  normalize_test.go  server.go  server_helpers_fuzz_test.go  server_test.go  svg_exporter_test.go  terminal_session.go  twoway_test.go
go/webterm/testdata/fuzz/FuzzExtractLabel/: efdeb133630bbbf7
go/webterm/testdata/fuzz/FuzzSlugify/: e4674c21c5507767
internal/terminalstate/: tracker.go
src/textual_webterm/: app_session.py  cli.py  docker_stats.py  local_server.py  session_manager.py  svg_exporter.py  terminal_session.py
src/textual_webterm/static/: monospace.css
src/textual_webterm/static/js/: ghostty-vt.wasm  terminal.js  terminal.ts
src/webterm/: _two_way_dict.py  alt_screen.py  cli.py  config.py  constants.py  docker_exec_session.py  docker_stats.py  docker_watcher.py  exit_poller.py  local_server.py  poller.py  session.py  session_manager.py  slugify.py  svg_exporter.py  terminal_session.py  types.py
src/webterm/static/: monospace.css
src/webterm/static/js/: terminal.js  terminal.ts
tests/: __init__.py  conftest.py  test_alt_screen.py  test_cli.py  test_cli_landing.py  test_config.py  test_config_manifest.py  test_constants.py  test_docker_exec_session.py  test_docker_stats.py  test_docker_watcher.py  test_exit_poller.py  test_local_server.py  test_local_server_unit.py  test_local_server_websocket_integration.py  test_modules.py  test_poller.py  test_session.py  test_session_manager.py  test_slugify.py  test_svg_exporter.py  test_terminal_session.py  test_two_way_dict.py  test_ws_sender.py
webterm/: assets_embed.go  cli_test.go  config.go  config_test.go  constants.go  coverage_boost_test.go  coverage_table.go  docker_exec_session.go  docker_http.go  docker_stats.go  docker_stats_test.go  docker_watcher.go  docker_watcher_test.go  identity.go  identity_test.go  normalize.go  normalize_test.go  png_exporter.go  replay.go  replay_test.go  server.go  server_test.go  session.go  session_helpers_test.go  session_manager.go  session_manager_test.go  shellsplit.go  shellsplit_test.go  slugify.go  slugify_test.go  svg_exporter.go  svg_exporter_test.go  terminal_session.go  test_helpers_test.go  themes.go  twoway.go
webterm/static/: manifest.json  monospace.css
webterm/static/js/: ghostty-vt.wasm  terminal.js  terminal.ts
